syntax = "proto3";

package callmanager;

option java_string_check_utf8 = true;
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_package = "cc.web3e.protobuf.callmanager";
option java_outer_classname = "GatewayProto";

import "common/common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service GatewayServeice {
  rpc ListGateways (common.ListRequest) returns (common.BaseItemsList) {};
  rpc GetGateway (common.IdMessage) returns (GatewayMessage) {};
  rpc SetGateway (GatewayMessage) returns (GatewayMessage) {};
  rpc ToggleGateway (common.IdMessage) returns (google.protobuf.Empty) {};
  rpc RemoveGateway (common.IdMessage) returns (google.protobuf.Empty) {};
  rpc GetGatewayTemplate (google.protobuf.Empty) returns (GatewayMessage) {};
  rpc SyncGatewaysCache (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc GetFreeswitchXml (common.IdMessage) returns (google.protobuf.StringValue) {};
}

message GatewayMessage {
  // @format uuid
  // @default "00000000-0000-0000-0000-000000000000"
  string id = 1;
  // @default true
  bool is_enabled = 2;
  string name = 3;
  optional string description = 4;
  // @default []
  repeated string sip_profile_ids = 5;
  // @default []
  repeated common.OrderedNameValueMessage params = 6;
  // @default []
  repeated common.OrderedNameValueMessage variables = 7;
}
